# libchemgps

./: AUTHORS  Makefile.in  NEWS  README  README.md  acinclude.m4  aclocal.m4  config.h.in  configure  configure.ac
docs/: Makefile.am  Makefile.in  README.compiler  README.libtool  README.linux  libchemgps.3
nbproject/: configurations.xml  project.xml
src/: Makefile.am  Makefile.in  chemgps.c  chemgps.h  cpuinfo.c  data.c  libchemgps.pc.in  predict.c  project.c  result.c  result.h  simcaqp.c  simcaqp.h
